Nav Tab Selection Fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,23 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dwello"
-        android:enableOnBackInvokedCallback="true">
+        android:theme="@style/Theme.Dwello">
+        <activity
+            android:name=".AccountActivity"
+            android:exported="false"
+            android:label="@string/title_activity_account"
+            android:theme="@style/Theme.Dwello" />
+        <activity
+            android:name=".FavouritesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_favourites"
+            android:theme="@style/Theme.Dwello" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -19,6 +29,7 @@
             android:theme="@style/Theme.Dwello">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
