Sign Up Unfinished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".DwelloApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
@@ -12,47 +13,60 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dwello">
+
         <activity
-            android:name=".AccountActivity"
+            android:name=".activities.SignUpActivity"
+            android:exported="true"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.Dwello" />
+
+        <activity
+            android:name=".activities.AccountActivity"
             android:exported="false"
             android:label="@string/title_activity_account"
             android:theme="@style/Theme.Dwello" />
+
         <activity
-            android:name=".FavouritesActivity"
+            android:name=".activities.FavouritesActivity"
             android:exported="false"
             android:label="@string/title_activity_favourites"
             android:theme="@style/Theme.Dwello" />
+
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:exported="true"
             android:label="@string/title_activity_splash"
             android:theme="@style/Theme.Dwello">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.Dwello" />
+
         <activity
-            android:name=".AuthActivity"
-            android:exported="false"
+            android:name=".activities.AuthActivity"
+            android:exported="true"
             android:label="@string/title_activity_auth"
             android:theme="@style/Theme.Dwello" />
+
         <activity
             android:name=".HomeScreen"
             android:exported="false"
             android:label="@string/title_activity_home_screen"
             android:theme="@style/Theme.Dwello" />
+
         <activity
             android:name=".NavigationGraph"
             android:exported="false"
             android:label="@string/title_activity_navigation_graph"
             android:theme="@style/Theme.Dwello" />
+
     </application>
 
 </manifest>
