--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ render.experimental.xml
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+Dwello/secrets.properties
 
 # Android Profiling
 *.hprof
